--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,7 +8,33 @@
     <title>Cafe de Altura</title>
     <link rel="stylesheet" href="/dist/output.css">
 </head>
+
 <body>
-    <h1 class="text-3xl">Hola</h1>
+
+    <!-- -----------NavBar------------- -->
+    <nav class="flex justify-between items-center bg-darkGrey py-3 px-10 text-taupe">
+        <div class="flex justify-center items-center gap-2">
+            <h2 class="text-2xl opacity-80">cafedealtura.com</h2>
+            <img src="/assets/icons/cup.png" alt="cup" class="">
+        </div>
+        <div class="nav-link flex justify-between gap-8">
+            <a class="font-semibold text-sm" href="/pages/store.html">Tienda</a>
+            <a class="font-semibold text-sm" href="">Suscripción</a>
+            <a class="font-semibold text-sm" href="">Para empresas</a>
+            <a class="font-semibold text-sm" href="">Sobre nosotros</a>
+            <a class="font-semibold text-sm" href="">Contacto</a>
+        </div>
+        <div class="flex justify-evenly items-center gap-6">
+            <div class="flex justify-evenly items-center gap-3">
+                <img src="/assets/icons/wPhone.png" alt="white phone" class="w-4.5 h-4.5">
+                <a href="">+34 919 49 05 18</a>
+            </div>
+            <button class="py-3 px-6 bg-grey rounded-[5px]">Iniciar sesión</button>
+        </div>
+        <img src="/assets/icons/bolsa.png" alt="">
+    </nav>
+    <!-- -----------NavBar------------- -->
+    <script src="./src/main.js"></script>
 </body>
+
 </html>
