--- a/index.html
+++ b/index.html
@@ -34,6 +34,22 @@
         <img src="/assets/icons/bolsa.png" alt="">
     </nav>
     <!-- -----------NavBar------------- -->
+    <!-- -----------Header------------- -->
+    <header class="flex gap-6 py-12 px-10 bg-white font-semibold">
+        <article class="head-article flex flex-col justify-center gap-4">
+            <h3 class="text-lg text-green">De la planta a tu taza</h3>
+            <h1 class="text-[40px]">El mejor café del mundo, ahora en tu casa.</h1>
+            <p class="text-sm font-normal">Trabajamos con agricultores de todo el mundo para seleccionar los mejores granos de café y que puedas
+                viajar desde la comodidad de tu hogar.</p>
+            <div class="flex gap-4">
+                <button class="py-3 px-6 rounded shadow-normal bg-black text-white">Descubrir orígenes</button>
+                <button class="py-3 px-6 rounded shadow-normal bg-green text-white">Comprar</button>
+            </div>
+        </article>
+        <img src="/assets/other/mainSection.jpg" alt="Main photo" class="shadow-normal">
+    </header>
+    <!-- -----------Header------------- -->
+
     <script src="./src/main.js"></script>
 </body>
 
