Three-cards-Listo

--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
         <article class="head-article flex flex-col justify-center gap-4">
             <h3 class="text-lg text-green">De la planta a tu taza</h3>
             <h1 class="text-[40px]">El mejor café del mundo, ahora en tu casa.</h1>
-            <p class="text-sm font-normal">Trabajamos con agricultores de todo el mundo para seleccionar los mejores granos de café y que puedas
+            <p class="text-sm font-normal">Trabajamos con agricultores de todo el mundo para seleccionar los mejores
+                granos de café y que puedas
                 viajar desde la comodidad de tu hogar.</p>
             <div class="flex gap-4">
                 <button class="py-3 px-6 rounded shadow-normal bg-black text-white">Descubrir orígenes</button>
@@ -49,6 +50,30 @@
         <img src="/assets/other/mainSection.jpg" alt="Main photo" class="shadow-normal">
     </header>
     <!-- -----------Header------------- -->
+    <!-- -----------Three Card------------- -->
+    <section class="three-card flex flex-col justify-center gap-6 p-12 bg-darkGrey">
+        <h4 class="text-center font-medium text-2xl text-white">Café con las mejores condiciones</h4>
+        <div class="hold-cards flex gap-6 self-center">
+            <article class="card w-[320px] h-[232px] flex flex-col justify-center items-center gap-4 p-6 shadow bg-white rounded-lg">
+                <img src="assets/icons/taskCard.png" alt="">
+                <p class="text-lg font-semibold text-center">Recibe tu pedido sin preocuparte</p>
+                <p class="text-sm text-center">Tienes cosas mas importantes en la cabeza, por eso con nuestra suscripción de café, nunca te
+                    quedarás sin tu taza de la mañana. </p>
+            </article>
+            <article class="card w-[316px] h-[232px] flex flex-col justify-center items-center gap-4 p-6 shadow bg-white rounded-lg">
+                <img src="assets/icons/truckCard.png" alt="">
+                <p class="text-lg font-semibold text-center">Envío en 24/48h</p>
+                <p class="text-sm text-center">Pide tu café antes de las 12h y lo recibirás al dia siguiente.</p>
+            </article>
+            <article class="card w-[316px] h-[232px] flex flex-col justify-center items-center gap-4 p-6 shadow bg-white rounded-lg">
+                <img src="assets/icons/giftCard.png" alt="">
+                <p class="text-lg font-semibold text-center">Descuentos y beneficios</p>
+                <p class="text-sm text-center">Cada dos meses, te regalamos una bolsa de un nuevo origen sorpresa, para que lo descubras junto a
+                    nosotros.</p>
+            </article>
+        </div>
+    </section>
+    <!-- -----------Three Card------------- -->
 
     <script src="./src/main.js"></script>
 </body>
