--- a/index.html
+++ b/index.html
@@ -7,10 +7,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cafe de Altura</title>
     <link rel="stylesheet" href="/dist/output.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@200;400;500;600&display=swap" rel="stylesheet">
 </head>
 
 <body>
-
     <!-- -----------NavBar------------- -->
     <nav class="flex justify-between items-center bg-darkGrey py-3 px-10 text-white">
         <div class="flex justify-center items-center gap-2">
@@ -35,7 +37,7 @@
     </nav>
     <!-- -----------NavBar------------- -->
     <!-- -----------Header------------- -->
-    <header class="flex gap-6 py-12 px-10 bg-white font-semibold">
+    <header class="flex gap-6 py-12 px-10 bg-taupe font-semibold">
         <article class="head-article flex flex-col justify-center gap-4">
             <h3 class="text-lg text-green">De la planta a tu taza</h3>
             <h1 class="text-[40px]">El mejor café del mundo, ahora en tu casa.</h1>
@@ -54,21 +56,26 @@
     <section class="three-card flex flex-col justify-center gap-6 p-12 bg-[url('/assets/other/background-coffe.jpg')]">
         <h4 class="text-center font-medium text-2xl text-white">Café con las mejores condiciones</h4>
         <div class="hold-cards flex gap-6 self-center">
-            <article class="card w-[320px] h-[232px] flex flex-col justify-center items-center gap-4 p-6 shadow bg-white rounded-lg">
+            <article
+                class="card w-[320px] h-[232px] flex flex-col justify-center items-center gap-4 p-6 shadow bg-white rounded-lg">
                 <img src="assets/icons/taskCard.png" alt="">
                 <p class="text-lg font-semibold text-center">Recibe tu pedido sin preocuparte</p>
-                <p class="text-sm text-center">Tienes cosas mas importantes en la cabeza, por eso con nuestra suscripción de café, nunca te
+                <p class="text-sm text-center">Tienes cosas mas importantes en la cabeza, por eso con nuestra
+                    suscripción de café, nunca te
                     quedarás sin tu taza de la mañana. </p>
             </article>
-            <article class="card w-[316px] h-[232px] flex flex-col justify-center items-center gap-4 p-6 shadow bg-white rounded-lg">
+            <article
+                class="card w-[316px] h-[232px] flex flex-col justify-center items-center gap-4 p-6 shadow bg-white rounded-lg">
                 <img src="assets/icons/truckCard.png" alt="">
                 <p class="text-lg font-semibold text-center">Envío en 24/48h</p>
                 <p class="text-sm text-center">Pide tu café antes de las 12h y lo recibirás al dia siguiente.</p>
             </article>
-            <article class="card w-[316px] h-[232px] flex flex-col justify-center items-center gap-4 p-6 shadow bg-white rounded-lg">
+            <article
+                class="card w-[316px] h-[232px] flex flex-col justify-center items-center gap-4 p-6 shadow bg-white rounded-lg">
                 <img src="assets/icons/giftCard.png" alt="">
                 <p class="text-lg font-semibold text-center">Descuentos y beneficios</p>
-                <p class="text-sm text-center">Cada dos meses, te regalamos una bolsa de un nuevo origen sorpresa, para que lo descubras junto a
+                <p class="text-sm text-center">Cada dos meses, te regalamos una bolsa de un nuevo origen sorpresa, para
+                    que lo descubras junto a
                     nosotros.</p>
             </article>
         </div>
@@ -78,7 +85,7 @@
     <section class="flex flex-col p-10 gap-10 justify-center bg-white" id="news">
         <h2 class="text-2xl font-medium text-green text-center">Novedades</h2>
         <div class="flex justify-between flex-wrap gap-6">
-            <article class="flex flex-col items-center gap-6 p-6 border border-grey rounded-lg shadow-md">
+            <article class="flex flex-col items-center gap-6 p-6 rounded-lg shadow-md">
                 <img src="assets/coffe/costaRicaBag.png" alt="">
                 <div class="flex flex-col justify-center items-center gap-3 font-semibold text-sm">
                     <p>Costa Rica Tarrazú</p>
@@ -86,7 +93,7 @@
                 </div>
                 <button class="p-2 font-semibold rounded bg-green text-sm text-white">Añadir</button>
             </article>
-            <article class="flex flex-col items-center gap-6 p-6 border border-grey rounded-lg shadow-md">
+            <article class="flex flex-col items-center gap-6 p-6 rounded-lg shadow-md">
                 <img src="assets/coffe/colombiaBag.png" alt="">
                 <div class="flex flex-col justify-center items-center gap-3 font-semibold text-sm">
                     <p>Colombia Los Naranjas</p>
@@ -94,7 +101,7 @@
                 </div>
                 <button class="p-2 font-semibold rounded bg-green text-sm text-white">Añadir</button>
             </article>
-            <article class="flex flex-col items-center gap-6 p-6 border border-grey rounded-lg shadow-md">
+            <article class="flex flex-col items-center gap-6 p-6 rounded-lg shadow-md">
                 <img src="assets/coffe/laosBag.png" alt="">
                 <div class="flex flex-col justify-center items-center gap-3 font-semibold text-sm">
                     <p>Laos Amanecer</p>
@@ -102,7 +109,7 @@
                 </div>
                 <button class="p-2 font-semibold rounded bg-green text-sm text-white">Añadir</button>
             </article>
-            <article class="flex flex-col items-center gap-6 p-6 border border-grey rounded-lg shadow-md">
+            <article class="flex flex-col items-center gap-6 p-6 rounded-lg shadow-md ">
                 <img src="assets/coffe/etiopiaBag.png" alt="">
                 <div class="flex flex-col justify-center items-center gap-3 font-semibold text-sm">
                     <p>Etiopía Yrgacheff</p>
@@ -111,14 +118,179 @@
                 <button class="p-2 font-semibold rounded bg-green text-sm text-white">Añadir</button>
             </article>
         </div>
-        <div class="news-last">
+        <div class="flex justify-center items-center gap-5 font-semibold underline">
             <p>Ver todo</p>
             <img src="/assets/icons/rightArrow.png" alt="">
         </div>
     </section>
     <!-- -----------coffes------------- -->
-    <div class="bg-darkGrey w-50 h-50"></div>
+    <!-- -----------QA------------- -->
+    <section class="qa bg-green py-12 px-[306px]">
+        <div class="hold-qa flex flex-col justify-center items-center gap-4 text-white">
+            <h2 class="font-semibold mb-8 text-2xl">Preguntas frecuentes</h2>
+            <div class="qa-div flex flex-col justify-center gap-4 p-6 bg-white rounded-[10px] text-darkGrey">
+                <div class="qa-div-click flex justify-between items-center">
+                    <p class="text-lg font-semibold">¿Cómo hago el pedido?</p>
+                    <img src="/assets/icons/upArrow.png" alt="">
+                </div>
+                <hr class="border bg-grey">
+                <p class="text-xs">Selecciona el café que desees probar y completa el proceso de compra. Si lo
+                    prefieres, te
+                    preguntaremos cada cuanto quieres que te lo mandemos a casa y asi nunca te quedarás sin café.
+                </p>
+            </div>
+            <div class="qa-div flex flex-col justify-center gap-4 p-6 bg-white rounded-[10px] text-darkGrey">
+                <div class="qa-div-click flex justify-between items-center">
+                    <p class="text-lg font-semibold">¿Por qué los precios son tan bajos?</p>
+                    <img src="/assets/icons/upArrow.png" alt="">
+                </div>
+                <hr class="border bg-grey">
+                <p class="text-xs">Viajamos constantemente para encontrar los mejores granos y a los agricultores más
+                    exigentes. Si
+                    podemos ofrecerte estos precios es porque tratamos directamente con los productores de café, sin
+                    intermediarios. Así obtenemos el mejor precio para ti y la persona que está detrás de los granos
+                    de
+                    café recibe el mayor beneficio posible. </p>
+            </div>
+            <div class="qa-div flex flex-col justify-center gap-4 p-6 bg-white rounded-[10px] text-darkGrey">
+                <div class="qa-div-click flex justify-between items-center">
+                    <p class="text-lg font-semibold">¿Es posible enviar café a mi oficina?</p>
+                    <img src="/assets/icons/upArrow.png" alt="" class="">
+                </div>
+            </div>
+            <div class="qa-last font-semibold flex justify-around items-center gap-5 underline mt-3">
+                <p>Resolvemos tus dudas</p>
+                <img src="assets/icons/rightArrowWhite.png" alt="">
+            </div>
+        </div>
+    </section>
+    <!-- -----------QA------------- -->
+    <!-- -----------Location------------- -->
+    <section class="location py-11 px-10">
+        <div class="hold-location flex gap-3">
+            <article class="location-article flex flex-col justify-center gap-4">
+                <h3 class="text-2xl font-medium">Pruébalo en nuestra coffe shop</h3>
+                <p class="text-sm font-semibold underline">Visita nuestra cafetería en el centro de la ciudad para
+                    probrar los granos de café antes de hacer
+                    tu pedido y llevate un descuento.</p>
+                <div class="location-last flex justify-center items-center self-start gap-5 mt-1">
+                    <p>Cómo llegar</p>
+                    <img src="/assets/icons/rightArrow.png" alt="">
+                </div>
+            </article>
+            <img src="/assets/other/nthSection.jpg" alt="" class="location-img">
+        </div>
+    </section>
+    <!-- -----------Location------------- -->
+    <!-- -----------FORM------------- -->
+    <section class="form bg-taupe px-10">
+        <div class="hold-form flex gap-6">
+            <article class="form-txt flex flex-col justify-center items-start gap-5 text-grey ">
+                <h4 class="text-black text-lg font-semibold">Entra en contacto con nosotros</h4>
+                <p>Si tienes dudas, ponte en contacto con nostros a través del formulario y te responderemos lo
+                    antes
+                    posible</p>
+                <p class="mt-5 mb-3">También puedes ponerte en contacto con nosotros en nuestra dirección o a través del
+                    teléfono de la
+                    tienda</p>
+                <div class="form-txt-address flex flex-col gap-0 mb-2">
+                    <p>742 Evergreen Terrace</p>
+                    <p>Springfield,OR 12345</p>
+                </div>
+                <div class="form-txt-tlf flex gap-4">
+                    <img src="/assets/icons/greyPhone.png" alt="">
+                    <p>+1 (555) 123-4567</p>
+                </div>
+                <div class="form-txt-mail flex gap-4">
+                    <img src="/assets/icons/greyMail.png" alt="">
+                    <p>support@example.com</p>
+                </div>
+                <div class="form-txt-last mt-5 flex gap-1.5">
+                    <p>¿Buscas un trabajo?</p>
+                    <p class="text-black font-semibold underline">Ver nuestras ofertas</p>
+                </div>
+            </article>
+            <article class="form-actual bg-white py-8 px-13">
+                <form action="" class="flex flex-col gap-6">
+                    <div class="form-actual-name flex flex-col gap-1">
+                        <label class="text-xs text-grey" for="name">Nombre completo</label>
+                        <input class="hover-focus" type="text" id="name" name="name"
+                            class=" outline-none py-2 px-4 shadow-sm rounded-md border border-taupe" required>
+                    </div>
+                    <div class="form-actual-email flex flex-col gap-1">
+                        <label class="text-xs text-grey" for="mail">Email</label>
+                        <input class="hover-focus" type="email" id="mail" name="e-mail"
+                            class=" outline-none py-2 px-4 shadow-sm rounded-md border border-taupe" required>
+                    </div>
+                    <div class="form-actual-tlf flex flex-col gap-1">
+                        <label class="text-xs text-grey" for="tlf">Teléfono</label>
+                        <div class="US flex border shadow-sm rounded-md">
+                            <div class="US-actual p-3 flex justify-center items-center gap-2">US <img
+                                    src="/assets/icons/upArrow.png" alt=""></div>
+                            <input class="outline-none border-none" type="tel" id="tlf" name="Phone"
+                                pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" placeholder="+1 (555) 987-6543">
+                        </div>
+                    </div>
 
+                    <textarea class="hover-focus outline-none py-2 px-4 shadow-sm rounded-md border border-taupe"
+                        name="comment" id="comment" rows="6" placeholder="¿En qué puedo ayudarte?"></textarea>
+                    <div class="flex items-center gap-3" id="form-check">
+                        <input type="checkbox" name="Accept" id="condition"
+                            class="accent-green outline-none py-2 px-4 shadow-sm rounded-md border border-taupe"
+                            required>
+                        <label class="text-sm text-grey" for="condition">Acepto la <span class="condition-span">Política
+                                de Privacidad</span>
+                            y los <span class="condition-span underline font-semibold">Términos y
+                                condiciones.</span></label>
+                    </div>
+                    <input class="bg-green py-3 px-6 rounded w-22 text-white border-none font-semibold" type="submit"
+                        name="" id="" value="Enviar">
+                </form>
+            </article>
+        </div>
+    </section>
+    <!-- -----------FORM------------- -->
+    <!-- -----------FOOTER------------- -->
+    <footer class="flex flex-col bg-black text-white pt-7 px-10">
+        <div class="footer-1 flex justify-start items-center gap-2 mb-2.5 text-white">
+            <h2 class="text-2xl ">cafedealtura.com</h2>
+            <img src="/assets/icons/cup.png" alt="cup" class="coffe-cup">
+        </div>
+        <div class="hold-footer flex mb-10 ">
+            <div class="footer-address flex flex-col gap-5">
+                <p id="size18" class="text-lg">Te ayudamos en</p>
+                <button
+                    class="footer-address-actual flex justify-center items-center p-4 gap-2.5 bg-grey text-white rounded border-none">
+                    <img src="assets/icons/wPhone.png" alt="">
+                    +34 919 49 05 18
+                </button>
+                <button
+                    class="footer-address-actual flex justify-center items-center p-4 gap-2.5 bg-grey text-white rounded border-none">
+                    <img src="assets/icons/whiteMail.png" alt="" id="mail-img">
+                    hola@cafedealtura.com
+                </button>
+            </div>
+            <div class="footer-link flex gap-[118px] justify-center">
+                <div class="footer-link-actual flex flex-col gap-4">
+                    <a href="" class="font-semibold text-sm">Tienda</a>
+                    <a href="" class="font-semibold text-sm">Suscripción</a>
+                    <a href="" class="font-semibold text-sm">Para empresas</a>
+                    <a href="" class="font-semibold text-sm">Sobre nosotros</a>
+                    <a href="" class="font-semibold text-sm">Contacto</a>
+
+                </div>
+                <div class="footer-link-actual">
+                    <p>Política de privacidad</p>
+                    <p>Política de cookies</p>
+                    <p>Términos y condiciones</p>
+                </div>
+            </div>
+        </div>
+    </footer>
+    <!-- -----------FOOTER------------- -->
+    <section class="footer-last flex justify-center font-semibold bg-black text-white">
+        <p>Todos los derechos reservados - Café de Altura SL - 2022</p>
+    </section>
 
     <script src="./src/main.js"></script>
 </body>
