--- a/pages/store.html
+++ b/pages/store.html
@@ -129,7 +129,7 @@
         <div class="hold-cards flex gap-6 self-center">
             <article
                 class="card w-[320px] h-[232px] flex flex-col justify-center items-center gap-4 p-6 shadow bg-white rounded-lg">
-                <img src="assets/icons/taskCard.png" alt="">
+                <img src="../assets/icons/taskCard.png" alt="">
                 <p class="text-lg font-semibold text-center">Recibe tu pedido sin preocuparte</p>
                 <p class="text-sm text-center">Tienes cosas mas importantes en la cabeza, por eso con nuestra
                     suscripción de café, nunca te
@@ -137,13 +137,13 @@
             </article>
             <article
                 class="card w-[316px] h-[232px] flex flex-col justify-center items-center gap-4 p-6 shadow bg-white rounded-lg">
-                <img src="assets/icons/truckCard.png" alt="">
+                <img src="../assets/icons/truckCard.png" alt="">
                 <p class="text-lg font-semibold text-center">Envío en 24/48h</p>
                 <p class="text-sm text-center">Pide tu café antes de las 12h y lo recibirás al dia siguiente.</p>
             </article>
             <article
                 class="card w-[316px] h-[232px] flex flex-col justify-center items-center gap-4 p-6 shadow bg-white rounded-lg">
-                <img src="assets/icons/giftCard.png" alt="">
+                <img src="../assets/icons/giftCard.png" alt="">
                 <p class="text-lg font-semibold text-center">Descuentos y beneficios</p>
                 <p class="text-sm text-center">Cada dos meses, te regalamos una bolsa de un nuevo origen sorpresa, para
                     que lo descubras junto a
@@ -162,11 +162,11 @@
             <div class="">
                 <p id="size18" class="text-lg mb-5">Te ayudamos en</p>
                 <button class="flex items-center py-4 px-6 gap-2.5 bg-grey text-white rounded border-none mb-5">
-                    <img src="assets/icons/wPhone.png" alt="">
+                    <img src="../assets/icons/wPhone.png" alt="">
                     +34 919 49 05 18
                 </button>
                 <button class="flex items-center py-4 px-6 gap-2.5 bg-grey text-white rounded border-none ">
-                    <img src="assets/icons/whiteMail.png" alt="" id="mail-img">
+                    <img src="../assets/icons/whiteMail.png" alt="" id="mail-img">
                     hola@cafedealtura.com
                 </button>
             </div>
