--- a/pages/store.html
+++ b/pages/store.html
@@ -6,7 +6,36 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cafe de Altura | Tienda</title>
-    <link rel="stylesheet" href="/dist/output.css">
+    <link rel="stylesheet" href="../src/input.css">
+    <script src="https://cdn.tailwindcss.com"></script>
+    <script>
+        tailwind.config = {
+            theme: {
+                extend: {
+                    colors: {
+                        white: '#FFF',
+                        grey: '#515051',
+                        darkGrey: '#2B2A2B',
+                        black: '#1F1815',
+                        taupe: '#E3DED7',
+                        green: '#2A5B45',
+                        offWhite: '#F7F5F3',
+                        greyInput: '#D1D5DB',
+                        greyHoverInput: '#9B9EA3',
+                        greenFocusInput: '#3F8F6B',
+                        greenCounter: 'hsla(153, 37%, 26%, 0.1)'
+                        
+                    },
+                    boxShadow: {
+                        normal: '0px 5px 5px rgba(0, 0, 0, 0.25)',
+                    }
+                }
+            }
+        }
+    </script>
+    <style type="text/tailwindcss">
+        
+    </style>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@200;400;500;600&display=swap" rel="stylesheet">
