--- a/pages/store.html
+++ b/pages/store.html
@@ -219,6 +219,7 @@
     <section class="footer-last flex justify-center font-semibold bg-darkGrey py-3 text-white">
         <p>Todos los derechos reservados - Café de Altura SL - 2022</p>
     </section>
+    <script src="../src/store.js"></script>
     <!-- -----------------FOOTER-------------- -->
 </body>
 
